# FinancialAnalystV2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yml  generate-data.yml  pages.yml
docs/: test-agent.md
src/: legacy_sample.cpp  legacy_sample.h
tests/: CMakeLists.txt  sample_test.cpp
tools/test_agent/: README.md  pyproject.toml
tools/test_agent/examples/: request.json
tools/test_agent/test_agent/: analyze.py  cli.py  execute.py  generate.py  models.py  request_io.py  runner.py  server.py  spec_extract.py  state_store.py  subprocess_util.py  triage.py
web/: Caddyfile  Dockerfile.caddy  README.md  docker-compose.prod.yml  docker-compose.yml  env.example
web/backend/: Dockerfile  requirements.txt
web/backend/app/: main.py  settings.py  static_export.py
web/backend/app/api/: __init__.py  admin.py  public.py
web/backend/app/auth/: __init__.py  deps.py  jwt.py  passwords.py
web/backend/app/db/: __init__.py  init_db.py  models.py  session.py
web/backend/app/jobs/: __init__.py  recompute.py  scheduler.py
web/backend/app/providers/: __init__.py  fundamentals_alpha_vantage.py  fundamentals_dart.py  fundamentals_yfinance.py  fundamentals_yfinance_kr.py  news_gdelt.py  news_google_rss.py  prices_fdr.py  sentiment_simple_en.py  sentiment_simple_ko.py  universe_fdr.py
web/backend/app/scoring/: __init__.py  calculators.py  engine.py  normalize.py
web/backend/app/util/: rate_limit.py
web/frontend/: Dockerfile  package-lock.json  package.json  trace.txt  vite.config.ts
web/frontend/public/data/: rankings_KR.json  rankings_US.json
web/frontend/src/: App.tsx  env.d.ts  index.css
(+207 files in other folders)
