[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_agent"
version = "0.1.0"
description = "Iterative unit-test generation + execution + triage agent for legacy C/C++ (CMake + GoogleTest)."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "TestAgent" }]
dependencies = []

[project.scripts]
test-agent = "test_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]

